--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -67,6 +67,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
+    'amaranthregular',
     Inter,
     -apple-system,
     BlinkMacSystemFont,
@@ -79,7 +80,7 @@ body {
     'Droid Sans',
     'Helvetica Neue',
     sans-serif;
-  font-size: 15px;
+  font-size: 12px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
