--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,5 @@
 @import './base.css';
+@import './layout.css';
 @import './fonts/fonts.css';
 
 #app {
@@ -7,6 +8,8 @@
   padding: 2rem;
 
   font-weight: normal;
+  font-family: 'amaranthregular';
+  font-size: 12px;
 }
 
 a,
@@ -35,11 +38,13 @@ h1 {
   font-style:normal;
   font-size: 5rem;
 }
+
 h2, h3 {
   font-family: 'wonderul_wilderness_filled_Rg', Arial, sans-serif;
   font-weight:normal;
   font-style:normal;
 }
+
 h2 {
   font-size: 4rem;
 }
