--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -39,7 +39,7 @@ h1 {
   font-size: 5rem;
 }
 
-h2, h3 {
+h2, h3, h4 {
   font-family: 'wonderul_wilderness_filled_Rg', Arial, sans-serif;
   font-weight:normal;
   font-style:normal;
@@ -47,4 +47,12 @@ h2, h3 {
 
 h2 {
   font-size: 4rem;
+}
+
+h3 {
+  font-size: 3rem;
+}
+
+h4 {
+  font-size: 1.75rem;
 }
